<resources>
    <string name="app_name">Сыграем в Города</string>
    <string name="facebook_app_id">1023004964531266</string>
    <string name="fb_login_protocol_scheme">fb1023004964531266</string>
    <string name="play">Играть</string>
    <string name="achievements">Достижения</string>
    <string name="cities_list">Города</string>
    <string name="pva">Игрок против Андроида</string>
    <string name="pvp">Игрок против Игрока</string>
    <string name="mul">Мультиплеер</string>
    <string name="net">Онлайн</string>
    <string name="leaders">Рейтинги</string>
    <string name="settings">Настройки</string>
    <string-array name="diff_names">
        <item>Лёгко</item>
        <item>Нормально</item>
        <item>Сложно</item>
    </string-array>
    <string-array name="themes">
        <item>Стандартная</item>
        <item>ВК Стиль</item>
        <item>Зелёная</item>
        <item>Белая</item>
        <item>География</item>
        <item>Тёмная</item>
        <item>Москва</item>
        <item>Киев</item>
        <item>Париж</item>
        <item>Нью-Йорк</item>
        <item>Осень</item>
    </string-array>
    <string-array name="settings_item">
        <item>Тема</item>
        <item>Сложность</item>
        <item>Подсчёт очков</item>
        <item>Таймер хода</item>
        <item>Автоисправление</item>
        <item>Звук</item>
        <item>Онлайн чат</item>
        <item>Статистика</item>
        <item>Чёрный список</item>
        <item>Проверка обновлений словаря</item>
    </string-array>
    <string name="scoring_by_points">По очкам</string>
    <string name="scoring_by_time">По времени</string>
    <string name="scoring_by_surr">До сдачи</string>
    <string-array name="scoring">
        <item>@string/scoring_by_points</item>
        <item>@string/scoring_by_time</item>
        <item>@string/scoring_by_surr</item>
    </string-array>
    <string-array name="timing">
        <item>Выкл</item>
        <item>1 мин</item>
        <item>3 мин</item>
        <item>5 мин</item>
        <item>7 мин</item>
        <item>9 мин</item>
        <item>11 мин</item>
        <item>13 мин</item>
        <item>15 мин</item>
    </string-array>
    <string-array name="on_off">
        <item>Выкл</item>
        <item>Вкл</item>
    </string-array>
    <string-array name="dic_upd">
        <item>Каждые 3ч</item>
        <item>Каждый день</item>
        <item>Выкл</item>
    </string-array>
    <string name="hint_addcity">О добавлении городов…</string>
    <string name="hint_stats">Просмотр статистики</string>
    <string name="hint_blacklist">Управление заблокированными игроками</string>
    <string name="addcity_title">Правила добавления городов</string>
    <string name="addcity_rules"><h1>Если вы знаете город которого нет в игре убедитесь в следующем:</h1>\n

        <li>Вы ввели город без опечатки. Наример: <b>Кешенев</b> вместо <b>Кишинев</b>.
        </li>
        \n
        <li>Город не был переименован. Например: <b>Ленинград</b> вместо <b>Санкт-Петербург</b>.
        </li>
        \n
        <li>Город правильно транслитерирован. Например: <b>Йокогама</b> вместо <b>Иокогама</b>.
        </li>
        \n
        <li>Введённый город должен писаться слитно, без тире и пробелов. Например: <b>Йошкарола</b> вместо <b>
            Йошкар-Ола</b>.
        </li>
        \n
        <li>Введённый вами населённый пункт <b>имеет статус города</b>. Вы можете проверить это, например, в Википедии.
        </li>
        \n

        Если все пункты выполнены. Вы можете сообщить об отсутствующем городе нам на email:
        <a href="mailto:quandastudio@mail.ru">quandastudio@mail.ru</a>
    </string>
    <string name="score_title">Статистика</string>
    <string name="missing">-- Данные отсутствуют --</string>
    <string-array name="group_names">
        <item>Всего сыграно партий</item>
        <item>Онлайн</item>
        <item>Рекорд</item>
        <item>Комбо</item>
        <item>Самые загадываемые города</item>
        <item>Самые длинные города</item>
    </string-array>
    <string-array name="field_names">
        <item>Быстрый ответ</item>
        <item>Короткие города</item>
        <item>Длинные города</item>
        <item>Одна страна</item>
        <item>Разные страны</item>
        <item>В режиме против Андроида</item>
        <item>В режиме против Игрока</item>
        <item>В режиме Мультиплеер</item>
        <item>В режиме Онлайн</item>
        <item>Общее время</item>
        <item>Побед</item>
        <item>Поражений</item>
        <item>err</item>
    </string-array>
    <string name="timeup">%1$s Победил!\nУ %2$s время вышло!</string>
    <string name="win_by_remote">Вы победили!\n Ваш оппонент отключился</string>
    <string name="draw">Ничья!</string>
    <string name="win">%1$s Победил!</string>
    <string name="black_list_title">Чёрный список</string>
    <string name="empty_black_list">Здесь будут отображаться игроки,\n которых вы внесли в чёрный список</string>
    <string name="remove_from_blacklist">Удалить\n игрока %1$s из чёрного списка?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="theme_title">Тема</string>
    <string-array name="sampleCities">
        <item>Берлин</item>
        <item>Нью-Йорк</item>
        <item>Казань</item>
    </string-array>
    <string name="multiplayer_title">Мультиплеер</string>
    <string name="wifi_desc">Для создания соединения вы должны находиться в одной Wi-Fi сети с вашим оппонентом</string>
    <string name="create">Создать</string>
    <string name="connect">Присоединиться</string>
    <string name="connect_to_wifi">Переподключитесь к Wi-Fi сети или попробуйте снова</string>
    <string name="network_title">Онлайн</string>
    <string name="networkmode_desc">Игра начнётся сразу после того, как вам найдётся оппонент. Не забывайте, что на
        ответ у вас есть полторы минуты
    </string>
    <string name="networkmode_auth_desc">Войдите с помощью вашего аккаунта из соц.сетей.</string>
    <string name="login_no_sn">Войти без соц. сети</string>
    <string name="connect_net">Подключиться</string>
    <string name="logout">Выйти</string>
    <string name="auth_error">Не удалось авторизоваться через соц.сеть</string>
    <string name="sign_to_continue">Нельзя начать игру, так как Вы не авторизованы</string>
    <string name="friend_game_diff_account">Для начала игры войдте в другой аккаунт!</string>
    <string name="select_action">Выберите действие</string>
    <string-array name="avatar_actions">
        <item>Изменить</item>
        <item>Удалить</item>
    </string-array>
    <string name="login_label">Введите логин [4–20 символов]</string>
    <string name="login">Логин</string>
    <string name="enter">Войти</string>
    <string name="dialog_change_mode_accept">Выбрать</string>
    <string name="dialog_change_mode_no">Не нужно</string>
    <string name="dialog_change_mode_title">Вы можете изменить режим подсчёта очков</string>
    <string name="friends_title">Мои друзья</string>
    <string name="no_friends">Список друзей пуст.\nЧтобы добавить игрока в
        друзья нажмите на его аватарку и выберите пункт Добавить в друзья
    </string>
    <string name="error">Ошибка: %1$s</string>
    <string name="err_msg_on_exception">Произошла какая-то ошибка&#8230; Проверьте подключение к Интернету \nили попробуйте зайти снова</string>
    <string name="invite_friend">Отправить приглашение игроку \"%1$s\"?\n Игрок получит приглашение если у него есть
        активное подключение к интернету
    </string>
    <string name="remove_from_friends">Вы действительно хотите удалить \"%1$s\" из списка друзей?</string>
    <string name="request">[Заявка]</string>
    <string name="waiting_for_connection">Ожидание подключения&#8230; %1$d</string>
    <string name="waiting_for_opp">Ожидание оппонента&#8230;</string>
    <string name="waiting_for_friend">Ожидание подключения к игроку…</string>
    <string name="connecting_to_friend">Подключение к другу&#8230;</string>
    <string name="banned_player">Вы подключились к заблокированному вами игроку. Повторный поиск&#8230;</string>
    <string name="server_auth_error">Ошибка авторизации на сервере: %1$s</string>
    <string name="new_version_available">Доступная новая версия игры! Рекомендуем установить обновление для
        использования новых возможностей приложения
    </string>
    <string name="cant_connect_to_friend">Не удалось подключиться к другу</string>
    <string name="friend_busy">Игрок "%1$s" занят. Попробуйте позднее</string>
    <string name="friend_denied">Игрок "%1$s" отклонил Вашу заявку</string>
    <string name="not_friend">Возможно игрок "%1$s" удалил Вас из своего списка друзей</string>
    <string name="no_user">Игрок не найден или заблокирован</string>
    <string name="friend_request">%1$s приглашает Вас сыграть в города.\nПринять заявку?</string>
    <string name="history_title">История</string>
    <string name="no_history">История игр пуста</string>
    <string name="wrong_letter">Город должен начинаться на букву "%c" </string>
    <string name="already_used">Город "%1$s" уже был загадан</string>
    <string name="city_not_found">Очень жаль, но нам неизвестен город "%1$s".\nПроверьте правильность написания</string>
    <string name="player">Игрок</string>
    <string name="android">Андроид</string>
    <string name="go_to_menu">Завершить игру и выйти в меню?</string>
    <string name="surrender">Завершить игру?</string>
    <string name="use_hint">Использовать подсказку?</string>
    <string name="internet_unavailable">Подсказка недоступна в данный момент.\nПроверьте подключение к интернету или
        попробуйте снова.
    </string>
    <string name="rewarded_ad_id">ca-app-pub-1936321025389344/2624259268</string>
    <string name="banner_unit_id">ca-app-pub-1936321025389344/5240856114</string>
    <string name="player_leaved">Ваш оппонент сдался!</string>
    <string name="opp_disconnect">Оппонент отключился</string>
    <string name="time_out">Время вышло!</string>
    <string name="connecting_to_server">Подключение к серверу&#8230;</string>
    <string name="player_banned">Игрок Заблокирован!</string>
    <string name="friend_request_message">Игрок %1$s хочет добавить Вас в друзья.</string>
    <string name="friend_request_title">Заявка в друзья</string>
    <string name="friends_request_accepted">Игрок %1$s добавлен в друзья</string>
    <string name="friends_request_denied">Заявка отклонена!</string>
    <string name="multiplier">&#xD7;%1$.1f</string>
    <string name="unk_error">Произошла неизвестная ошибка. ERR:  %1$s</string>
    <string-array name="hints">
        <item>Добро Пожаловать в игру!</item>
        <item>Вы будете загадывать города с\nвашим андроидом по очереди</item>
        <item>Каждое последующее слово \nдолжно начинаться на последнюю \nбукву предыдущего слова</item>
        <item>Исключение составляют только: ь, ъ, ы, ё</item>
        <item>Победителем считается тот, кто в конце игры набрал больше очков</item>
    </string-array>
    <string name="user_banned">Пользователь %1$s заблокирован</string>
    <string name="new_friend_request">Заявка в друзья отправлена!</string>
    <string-array name="player_menu">
        <item>Заблокировать</item>
        <item>В Друзья</item>
    </string-array>
    <string name="this_is_a_country">%s это страна</string>
    <string name="this_is_a_state">%s это название штата</string>
    <string name="this_is_not_a_city">%s не является городом</string>
    <string name="renamed_city">Город %s ранее был переименован в %s.</string>
    <string name="uncompleted_city">Возможно вы имели в виду город %s ?</string>
    <string name="not_city">%s не является городом. Это %s</string>
    <string name="share">Поделиться</string>
    <string name="again">Снова</string>
    <string name="menu">Меню</string>
    <string name="authorization">Авторизация…</string>
</resources>