<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textView2"
            android:text="@string/wifi_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="20dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/create"
            app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/create"
            app:icon="@drawable/ic_wifi_tethering_24"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/connect"
            app:layout_constraintStart_toStartOf="@+id/connect"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/connect"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/btn_pad"
            android:text="@string/connect"
            app:icon="@drawable/ic_net_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>